feat(grid): add grid sm and md sizes
BREAKING CHANGE: Added `size` appearance property:
* `size` controls the overall physical size of the grid and it's components.
* currently supports small and medium (default) sizes

The `size` property generates component specific class name `k-grid-{size}`.

BREAKING CHANGE: Added kendo prefix to all grid variables:

Change variable names from `$grid-*` to `$kendo-grid-*`.

--- a/packages/bootstrap/scss/chip/_variables.scss
+++ b/packages/bootstrap/scss/chip/_variables.scss
@@ -38,6 +38,8 @@ $kendo-chip-line-height-lg: $kendo-chip-line-height !default;
 /// Calculated height of the chip.
 /// @group chip
 $kendo-chip-calc-size: calc( #{$kendo-chip-line-height * 1em} + #{$kendo-chip-padding-y * 2} + #{$kendo-chip-border-width * 2} ) !default;
+$kendo-chip-calc-size-sm: calc( #{$kendo-chip-line-height-sm * 1em} + #{$kendo-chip-padding-y-sm * 2} + #{$kendo-chip-border-width * 2} ) !default;
+
 
 /// Sizes map for the chip.
 /// @group chip
