--- a/packages/default/scss/grid/_theme.scss
+++ b/packages/default/scss/grid/_theme.scss
@@ -1,22 +1,18 @@
 @include exports("grid/theme") {
 
-    $tooltip-bg: $primary !default;
-    $tooltip-text: k-contrast-legacy($primary) !default;
-
     .k-grid-header,
-    .k-header,
-    th.k-header,
     .k-grid-header-wrap,
     .k-grouping-header,
-    .k-grid td,
+    .k-grid .k-table-th,
+    .k-grid .k-table-td,
     .k-grid-footer,
     .k-grid-footer-wrap,
     .k-grid-content-locked,
     .k-grid-footer-locked,
     .k-grid-header-locked,
-    .k-filter-row > td,
-    .k-filter-row > th {
-        @include fill( $border: $grid-header-border );
+    .k-filter-row > .k-table-th,
+    .k-filter-row > .k-table-td {
+        @include fill( $border: $kendo-grid-header-border );
     }
 
     .k-grid-header,
@@ -24,9 +20,13 @@
     .k-grid-add-row,
     .k-grid-footer {
         @include fill(
-            $color: $grid-header-text,
-            $bg: $grid-header-bg
+            $color: $kendo-grid-header-text,
+            $bg: $kendo-grid-header-bg
         );
+    }
+
+    .k-grid .k-table {
+        background-color: inherit;
     }
 
     .k-grid-toolbar {
@@ -41,133 +41,126 @@
 
     .k-grid-content {
         // setting this background color resolves glitches in iOS
-        @include fill($bg: $grid-bg );
+        @include fill($bg: $kendo-grid-bg );
     }
 
-    .k-group-footer td,
-    .k-grouping-row td,
-    tbody .k-group-cell {
+    .k-group-footer .k-table-td,
+    .k-grouping-row .k-table-td,
+    .k-table-tbody .k-group-cell {
         @include fill(
-            $color: $grid-grouping-row-text,
-            $bg: $grid-grouping-row-bg
+            $color: $kendo-grid-grouping-row-text,
+            $bg: $kendo-grid-grouping-row-bg
         );
     }
 
     .k-grouping-dropclue {
         &::before {
-            border-color: $grid-header-text transparent transparent;
+            border-color: $kendo-grid-header-text transparent transparent;
         }
 
         &::after {
-            background-color: $grid-header-text;
+            background-color: $kendo-grid-header-text;
         }
     }
 
     .k-grid {
-        @include fill( $grid-text, $grid-bg, $grid-border );
+        @include fill( $kendo-grid-text, $kendo-grid-bg, $kendo-grid-border );
 
         // Alt row
-        tr.k-alt {
-            background-color: $grid-alt-bg;
+        .k-table-row.k-table-alt-row {
+            background-color: $kendo-grid-alt-bg;
         }
 
         // Hover state
-        tbody > tr:not(.k-detail-row):hover,
-        tbody > tr:not(.k-detail-row).k-hover {
-            color: $grid-hovered-text;
-            background-color: $grid-hovered-bg;
+        .k-table-tbody > .k-table-row:not(.k-detail-row):hover,
+        .k-table-tbody > .k-table-row:not(.k-detail-row).k-hover {
+            color: $kendo-grid-hovered-text;
+            background-color: $kendo-grid-hovered-bg;
         }
 
         // Selected state
-        td.k-selected,
-        tr.k-selected > td {
-            color: $grid-selected-text;
-            background-color: $grid-selected-bg;
+        .k-table-td.k-selected,
+        .k-table-row.k-selected > .k-table-td {
+            color: $kendo-grid-selected-text;
+            background-color: $kendo-grid-selected-bg;
         }
 
         // Focused state
-        td:focus,
-        td.k-focus,
-        th:focus,
-        th.k-focus,
-        .k-master-row > td:focus,
-        .k-grouping-row > td:focus,
-        .k-detail-row > td:focus,
-        .k-group-footer > td:focus,
-        .k-grid-pager.k-focus {
-            box-shadow: $grid-focused-shadow;
+        .k-table-th,
+        .k-table-td,
+        .k-master-row > .k-table-td,
+        .k-grouping-row > .k-table-td,
+        .k-detail-row > .k-table-td,
+        .k-group-footer > .k-table-td,
+        .k-grid-pager {
+            &:focus,
+            &.k-focus {
+                box-shadow: $kendo-grid-focused-shadow;
+            }
         }
 
         .k-grid-filter,
         .k-header-column-menu,
         .k-grid-header-menu,
         .k-hierarchy-cell .k-icon {
-            color: $grid-header-text;
+            color: $kendo-grid-header-text;
         }
 
         .k-grouping-row {
-            background-color: $grid-grouping-row-bg;
+            background-color: $kendo-grid-grouping-row-bg;
 
             .k-icon {
-                color: $grid-header-text;
+                color: $kendo-grid-header-text;
             }
 
             .k-grid-content-sticky {
-                border-color: $grid-sticky-border;
-                border-top-color: $grid-header-border;
+                border-color: $kendo-grid-sticky-border;
+                border-top-color: $kendo-grid-header-border;
             }
         }
 
         // Locked columns
         .k-grid-header-locked,
         .k-grid-content-locked,
-        .k-grid-header-locked .k-header,
-        .k-grid-content-locked td {
-            border-color: $grid-sticky-header-border;
+        .k-grid-header-locked .k-table-th,
+        .k-grid-content-locked .k-table-td {
+            border-color: $kendo-grid-sticky-header-border;
         }
 
         .k-grid-content-locked {
-            .k-group-footer td,
+            .k-group-footer .k-table-td,
             .k-group-cell {
-                @include fill( $border: $grid-header-border );
+                @include fill( $border: $kendo-grid-header-border );
             }
 
-            .k-grouping-row + tr td {
-                border-top-color: $grid-header-border;
+            .k-grouping-row + .k-table-row .k-table-td {
+                border-top-color: $kendo-grid-header-border;
             }
 
             // Selected state
-            .k-selected td {
-                @include fill( $bg: $grid-sticky-selected-bg );
+            .k-selected .k-table-td {
+                @include fill( $bg: $kendo-grid-sticky-selected-bg );
             }
 
-            .k-selected.k-alt td {
-                @include fill( $bg: $grid-sticky-selected-alt-bg );
+            .k-selected.k-table-alt-row .k-table-td {
+                @include fill( $bg: $kendo-grid-sticky-selected-alt-bg );
             }
 
             // Selected hover
-            .k-selected:hover td,
-            .k-selected.k-hover td {
-                @include fill( $bg: $grid-sticky-selected-hovered-bg );
+            .k-selected:hover .k-table-td,
+            .k-selected.k-hover .k-table-td {
+                @include fill( $bg: $kendo-grid-sticky-selected-hovered-bg );
             }
         }
 
-        .k-grid-header-locked .k-header {
-            border-bottom-color: $grid-header-border;
-        }
-
-        &[dir="rtl"],
-        &.k-rtl {
-            th.k-hierarchy-cell,
-            td.k-hierarchy-cell {
-                border-left-color: transparent;
-            }
+        .k-grid-header-locked .k-table-th {
+            border-bottom-color: $kendo-grid-header-border;
         }
     }
 
     col.k-sorted,
-    th.k-sorted {
-        background-color: $grid-sorted-bg;
+    .k-table-th.k-sorted {
+        background-color: $kendo-grid-sorted-bg;
     }
 
     // Grid header
@@ -178,7 +171,7 @@
         .k-i-sort-asc-small,
         .k-i-sort-desc-small,
         .k-sort-order {
-            color: $grid-sorting-indicator-text;
+            color: $kendo-grid-sorting-indicator-text;
         }
 
         .k-grid-filter,
@@ -199,65 +192,65 @@
             }
         }
 
-        th.k-grid-header-sticky,
-        td.k-grid-header-sticky,
+        .k-table-th.k-grid-header-sticky,
+        .k-table-td.k-grid-header-sticky,
         .k-grid-header-sticky.k-sorted {
             @include fill(
-                $color: $grid-sticky-header-text,
-                $bg: $grid-sticky-header-bg
+                $color: $kendo-grid-sticky-header-text,
+                $bg: $kendo-grid-sticky-header-bg
             );
 
-            border-right-color: $grid-sticky-header-border;
-            border-left-color: $grid-sticky-header-border;
+            border-right-color: $kendo-grid-sticky-header-border;
+            border-left-color: $kendo-grid-sticky-header-border;
         }
     }
 
     // Grid footer
     .k-grid-footer {
         @include fill(
-            $grid-footer-text,
-            $grid-footer-bg,
-            $grid-footer-border
+            $kendo-grid-footer-text,
+            $kendo-grid-footer-bg,
+            $kendo-grid-footer-border
         );
         .k-grid-footer-sticky {
-            border-left-color: $grid-sticky-border;
-            border-right-color: $grid-sticky-border;
-            background-color: $grid-sticky-footer-bg;
+            border-left-color: $kendo-grid-sticky-border;
+            border-right-color: $kendo-grid-sticky-border;
+            background-color: $kendo-grid-sticky-footer-bg;
         }
     }
 
     // Content
     .k-master-row {
         .k-grid-content-sticky {
-            border-color: $grid-sticky-border;
-            border-top-color: $grid-header-border;
-            background-color: $grid-sticky-bg;
+            border-color: $kendo-grid-sticky-border;
+            border-top-color: $kendo-grid-header-border;
+            background-color: $kendo-grid-sticky-bg;
         }
 
         .k-grid-row-sticky {
-            border-top-color: $grid-sticky-border;
-            border-bottom-color: $grid-sticky-border;
-            background-color: $grid-sticky-bg;
+            border-top-color: $kendo-grid-sticky-border;
+            border-bottom-color: $kendo-grid-sticky-border;
+            background-color: $kendo-grid-sticky-bg;
         }
 
-        &.k-alt {
+        &.k-table-alt-row {
             .k-grid-content-sticky,
             .k-grid-row-sticky {
-                @include fill( $bg: $grid-sticky-alt-bg );
+                @include fill( $bg: $kendo-grid-sticky-alt-bg );
             }
         }
 
         // Selected state
         &.k-selected .k-grid-content-sticky,
         &.k-selected .k-grid-row-sticky,
-        td.k-grid-content-sticky.k-selected {
-            @include fill( $bg: $grid-sticky-selected-bg );
+        .k-table-td.k-grid-content-sticky.k-selected {
+            @include fill( $bg: $kendo-grid-sticky-selected-bg );
         }
 
-        &.k-selected.k-alt .k-grid-content-sticky,
-        &.k-selected.k-alt .k-grid-row-sticky,
-        &.k-alt td.k-grid-content-sticky.k-selected {
-            @include fill( $bg: $grid-sticky-selected-alt-bg );
+        &.k-selected.k-table-alt-row .k-grid-content-sticky,
+        &.k-selected.k-table-alt-row .k-grid-row-sticky,
+        &.k-table-alt-row .k-table-td.k-grid-content-sticky.k-selected {
+            @include fill( $bg: $kendo-grid-sticky-selected-alt-bg );
         }
 
 
@@ -266,7 +259,7 @@
         &:hover .k-grid-row-sticky,
         &.k-hover .k-grid-content-sticky,
         &.k-hover .k-grid-row-sticky {
-            background-color: $grid-sticky-hovered-bg;
+            background-color: $kendo-grid-sticky-hovered-bg;
         }
 
 
@@ -275,94 +268,94 @@
         &.k-selected:hover .k-grid-row-sticky,
         &.k-selected.k-hover .k-grid-content-sticky,
         &.k-selected.k-hover .k-grid-row-sticky,
-        &:hover td.k-grid-content-sticky.k-selected,
-        &.k-hover td.k-grid-content-sticky.k-selected {
-            background-color: $grid-sticky-selected-hovered-bg;
+        &:hover .k-table-td.k-grid-content-sticky.k-selected,
+        &.k-hover .k-table-td.k-grid-content-sticky.k-selected {
+            background-color: $kendo-grid-sticky-selected-hovered-bg;
         }
     }
 
-    kendo-grid {
+    kendo-grid.k-grid {
         .k-grid-content-sticky {
-            border-top-color: $grid-header-border;
-            border-left-color: $grid-sticky-border;
-            border-right-color: $grid-sticky-border;
-            background-color: $grid-sticky-bg;
+            border-top-color: $kendo-grid-header-border;
+            border-left-color: $kendo-grid-sticky-border;
+            border-right-color: $kendo-grid-sticky-border;
+            background-color: $kendo-grid-sticky-bg;
 
             &:hover,
             &.k-hover {
-                background-color: $grid-sticky-hovered-bg;
+                background-color: $kendo-grid-sticky-hovered-bg;
             }
         }
 
         .k-grid-row-sticky {
-            td {
-                border-top-color: $grid-sticky-border;
-                border-bottom-color: $grid-sticky-border;
-                background-color: $grid-sticky-bg;
+            .k-table-td {
+                border-top-color: $kendo-grid-sticky-border;
+                border-bottom-color: $kendo-grid-sticky-border;
+                background-color: $kendo-grid-sticky-bg;
             }
 
-            &:hover td,
-            &.k-hover td {
-                background-color: $grid-sticky-hovered-bg;
+            &:hover .k-table-td,
+            &.k-hover .k-table-td {
+                background-color: $kendo-grid-sticky-hovered-bg;
             }
         }
 
-        .k-alt .k-grid-content-sticky,
-        .k-grid-row-sticky.k-alt td {
-            @include fill( $bg: $grid-sticky-alt-bg );
+        .k-table-alt-row .k-grid-content-sticky,
+        .k-grid-row-sticky.k-table-alt-row .k-table-td {
+            @include fill( $bg: $kendo-grid-sticky-alt-bg );
         }
 
         // Selected state
-        tr.k-selected .k-grid-content-sticky,
-        .k-selected.k-grid-row-sticky td,
-        .k-grid-row-sticky td.k-selected,
+        .k-table-row.k-selected .k-grid-content-sticky,
+        .k-selected.k-grid-row-sticky .k-table-td,
+        .k-grid-row-sticky .k-table-td.k-selected,
         .k-selected.k-grid-content-sticky {
-            @include fill( $bg: $grid-sticky-selected-bg );
+            @include fill( $bg: $kendo-grid-sticky-selected-bg );
         }
 
-        tr.k-selected.k-alt .k-grid-content-sticky,
-        .k-selected.k-alt.k-grid-row-sticky td,
-        .k-alt .k-selected.k-grid-content-sticky {
-            @include fill( $bg: $grid-sticky-selected-alt-bg );
+        .k-table-row.k-selected.k-table-alt-row .k-grid-content-sticky,
+        .k-selected.k-table-alt-row.k-grid-row-sticky .k-table-td,
+        .k-table-alt-row .k-selected.k-grid-content-sticky {
+            @include fill( $bg: $kendo-grid-sticky-selected-alt-bg );
         }
 
         // Hover state
-        tr:hover .k-grid-content-sticky,
-        tr.k-hover .k-grid-content-sticky,
-        .k-grid-row-sticky:hover td,
-        .k-grid-row-sticky.k-hover td,
-        .k-grid-row-sticky.k-alt:hover td,
-        .k-grid-row-sticky.k-alt.k-hover td,
-        .k-alt:hover .k-grid-content-sticky,
-        .k-alt.k-hover .k-grid-content-sticky {
-            background-color: $grid-sticky-hovered-bg;
+        .k-table-row:hover .k-grid-content-sticky,
+        .k-table-row.k-hover .k-grid-content-sticky,
+        .k-grid-row-sticky:hover .k-table-td,
+        .k-grid-row-sticky.k-hover .k-table-td,
+        .k-grid-row-sticky.k-table-alt-row:hover .k-table-td,
+        .k-grid-row-sticky.k-table-alt-row.k-hover .k-table-td,
+        .k-table-alt-row:hover .k-grid-content-sticky,
+        .k-table-alt-row.k-hover .k-grid-content-sticky {
+            background-color: $kendo-grid-sticky-hovered-bg;
         }
 
         // Selected + Hover
-        tr.k-selected:hover .k-grid-content-sticky,
-        tr.k-selected.k-hover .k-grid-content-sticky,
-        .k-selected.k-grid-row-sticky:hover td,
-        .k-selected.k-grid-row-sticky.k-hover td,
-        .k-selected.k-alt.k-grid-row-sticky:hover td,
-        .k-selected.k-alt.k-grid-row-sticky.k-hover td,
-        tr.k-selected.k-alt:hover .k-grid-content-sticky,
-        tr.k-selected.k-alt.k-hover .k-grid-content-sticky,
-        .k-grid-row-sticky:hover td.k-selected,
-        .k-grid-row-sticky.k-hover td.k-selected,
-        tr:hover .k-grid-content-sticky.k-selected,
-        tr.k-hover .k-grid-content-sticky.k-selected {
-            background-color: $grid-sticky-selected-hovered-bg;
+        .k-table-row.k-selected:hover .k-grid-content-sticky,
+        .k-table-row.k-selected.k-hover .k-grid-content-sticky,
+        .k-selected.k-grid-row-sticky:hover .k-table-td,
+        .k-selected.k-grid-row-sticky.k-hover .k-table-td,
+        .k-selected.k-table-alt-row.k-grid-row-sticky:hover .k-table-td,
+        .k-selected.k-table-alt-row.k-grid-row-sticky.k-hover .k-table-td,
+        .k-table-row.k-selected.k-table-alt-row:hover .k-grid-content-sticky,
+        .k-table-row.k-selected.k-table-alt-row.k-hover .k-grid-content-sticky,
+        .k-grid-row-sticky:hover .k-table-td.k-selected,
+        .k-grid-row-sticky.k-hover .k-table-td.k-selected,
+        .k-table-row:hover .k-grid-content-sticky.k-selected,
+        .k-table-row.k-hover .k-grid-content-sticky.k-selected {
+            background-color: $kendo-grid-sticky-selected-hovered-bg;
         }
     }
 
     .k-grouping-row {
         .k-grid-content-sticky {
-            @include fill( $bg: $grid-sticky-header-bg );
+            @include fill( $bg: $kendo-grid-sticky-header-bg );
         }
 
         &:hover .k-grid-content-sticky,
         &.k-hover .k-grid-content-sticky {
-            @include fill( $bg: $grid-sticky-hovered-bg );
+            @include fill( $bg: $kendo-grid-sticky-hovered-bg );
         }
     }
 
@@ -428,9 +421,9 @@
 
     .k-column-menu-group-header-text {
         @include fill(
-            $grid-column-menu-group-header-text,
-            $grid-column-menu-group-header-bg,
-            $grid-column-menu-group-header-border
+            $kendo-grid-column-menu-group-header-text,
+            $kendo-grid-column-menu-group-header-bg,
+            $kendo-grid-column-menu-group-header-border
         );
     }
 
@@ -439,8 +432,8 @@
     }
 
     .k-grid-norecords-template {
-        background-color: $grid-bg;
-        border-color: $grid-border;
+        background-color: $kendo-grid-bg;
+        border-color: $kendo-grid-border;
     }
 
 }
