--- a/packages/material/scss/table/_theme.scss
+++ b/packages/material/scss/table/_theme.scss
@@ -1,1 +1,53 @@
 @import "@progress/kendo-theme-default/scss/table/_theme.scss";
+
+@include exports( "table/theme/material" ) {
+
+    // Selected state
+    .k-table-tbody .k-table-row.k-selected,
+    .k-table-tbody .k-table-cell.k-selected {
+        color: $kendo-grid-selected-text;
+        background-color: $kendo-grid-selected-bg;
+    }
+
+    .k-table-tbody .k-table-row.k-selected > td {
+        color: inherit;
+        background-color: transparent;
+    }
+
+    .k-table .k-table-tbody {
+        td:focus,
+        td.k-focus,
+        th:focus,
+        th.k-focus {
+            color: inherit;
+            background-color: $kendo-grid-hovered-bg;
+        }
+    }
+
+}
+
+@include exports( "table/theme/material" ) {
+
+    // Selected state
+    .k-table-tbody .k-table-row.k-selected,
+    .k-table-tbody .k-table-cell.k-selected {
+        color: $kendo-grid-selected-text;
+        background-color: $kendo-grid-selected-bg;
+    }
+
+    .k-table-tbody .k-table-row.k-selected > td {
+        color: inherit;
+        background-color: transparent;
+    }
+
+    .k-table .k-table-tbody {
+        td:focus,
+        td.k-focus,
+        th:focus,
+        th.k-focus {
+            color: inherit;
+            background-color: $kendo-grid-hovered-bg;
+        }
+    }
+
+}
